; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/spi-nor/extr_spi-nor.c_spi_nor_setup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/spi-nor/extr_spi-nor.c_spi_nor_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_nor = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 (%struct.spi_nor.0*, %struct.spi_nor_hwcaps*)* }
%struct.spi_nor.0 = type opaque
%struct.spi_nor_hwcaps = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.spi_nor*, %struct.spi_nor_hwcaps*)* @spi_nor_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spi_nor_setup(%struct.spi_nor* %0, %struct.spi_nor_hwcaps* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.spi_nor*, align 8
  %5 = alloca %struct.spi_nor_hwcaps*, align 8
  store %struct.spi_nor* %0, %struct.spi_nor** %4, align 8
  store %struct.spi_nor_hwcaps* %1, %struct.spi_nor_hwcaps** %5, align 8
  %6 = load %struct.spi_nor*, %struct.spi_nor** %4, align 8
  %7 = getelementptr inbounds %struct.spi_nor, %struct.spi_nor* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32 (%struct.spi_nor.0*, %struct.spi_nor_hwcaps*)*, i32 (%struct.spi_nor.0*, %struct.spi_nor_hwcaps*)** %8, align 8
  %10 = icmp ne i32 (%struct.spi_nor.0*, %struct.spi_nor_hwcaps*)* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %21

12:                                               ; preds = %2
  %13 = load %struct.spi_nor*, %struct.spi_nor** %4, align 8
  %14 = getelementptr inbounds %struct.spi_nor, %struct.spi_nor* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32 (%struct.spi_nor.0*, %struct.spi_nor_hwcaps*)*, i32 (%struct.spi_nor.0*, %struct.spi_nor_hwcaps*)** %15, align 8
  %17 = load %struct.spi_nor*, %struct.spi_nor** %4, align 8
  %18 = bitcast %struct.spi_nor* %17 to %struct.spi_nor.0*
  %19 = load %struct.spi_nor_hwcaps*, %struct.spi_nor_hwcaps** %5, align 8
  %20 = call i32 %16(%struct.spi_nor.0* %18, %struct.spi_nor_hwcaps* %19)
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %12, %11
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
